Create awesome link, add about section and add fonts.

--- a/ori/theme/ori_app/src/index.sass
+++ b/ori/theme/ori_app/src/index.sass
@@ -1,11 +1,11 @@
-@import "~breakpoint-sass/stylesheets/_breakpoint.scss"
 @import "~susy/sass/_susy.scss" 
 @import './lib/sass/normalize.scss'
+@import './styles/conf/_sizes.sass'
 @import "./styles/conf/_breakpoints.sass"
 @import "./styles/conf/_grid.sass"
 @import "./styles/conf/_colors.sass"
 @import "./styles/conf/_extentions.sass"
-@import "./styles/conf/_helpers.sass"
+// @import "./styles/conf/_helpers.sass"
 @import "./styles/conf/_mixins.sass"
 @import "./styles/conf/_fonts.sass"
 @import "./styles/conf/_common.sass"
