--- a/ori/theme/ori_app/src/styles/conf/_colors.sass
+++ b/ori/theme/ori_app/src/styles/conf/_colors.sass
@@ -2,10 +2,11 @@
 $beige: #dfa76e
 
 // Используемые цыета
+$i: !important
 $darkGray: #333
-$darkBlue: #403866
+$darkBlue: #403866 
 $red: #99303B
-$white: #f7f7f7
+$white: #f2f2f2
 $purple: #654178
 $gray: #828282
 $cian: #28574E//#4F7F76
@@ -15,16 +16,15 @@ $darkBurgunt: #870447
 $burgund: #941857
 
 $nightBlack: #3f3c39
-$maroon: #952d2c
 $hover-link: $burgund
 $shadow: hsla(0,0,0, .2)
 $ghostBlack:  rgba(29, 22, 16, .8)
 
-
 $mainColor: $pink
-$background: #E5E5E5
+$background: $white
 $buttonGradient: linear-gradient(180deg, #FF61B2 1.1%, $pink 54.7%, #FF61B2 100%), $pink
 $lightButtonGradinet: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $pink 100%), $pink
-$activeNavGradient: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $pink 100%), $pink
 $registrationButtonGradinet: linear-gradient(180deg, #FA8BC4 0%, $burgund 99.99%, rgba(255, 255, 255, 0) 100%), $pink
 
+
+$linkGradient: linear-gradient(180deg, $pink 0% ,rgba(255, 255, 255, .35) 50%, $pink 100%), $pink
