--- a/ori/theme/ori_app/src/styles/conf/_grid.sass
+++ b/ori/theme/ori_app/src/styles/conf/_grid.sass
@@ -3,7 +3,8 @@ $susy: (use-custom: (em: true), columns: 12, gutters: 0, gutter-position: split,
 @include border-box-sizing
 $border-box-sizing : true
 $gutters: 0
-
+.grow	
+	flex-grow: 1
 .fullWidth
 	min-width: 100%
 .halfWidth
