--- a/ori/theme/ori_app/src/fonts.sass
+++ b/ori/theme/ori_app/src/fonts.sass
@@ -24,6 +24,7 @@ $fontdir: './fonts/'
 
 @include font-face($mainFontName, '#{$fontdir}ProximaNova/ProximaNova-Regular', normal, normal)
 @include font-face($mainFontName, '#{$fontdir}ProximaNova/ProximaNova-RegularIt', normal, italic)
+@include font-face($mainFontName, '#{$fontdir}ProximaNova/ProximaNova-Semibold', 600, normal)
 @include font-face($mainFontName, '#{$fontdir}ProximaNova/ProximaNova-Bold', bold, normal)
 @include font-face($mainFontName, '#{$fontdir}ProximaNova/ProximaNova-BoldIt', bold, italic)
 @include font-face($mainFontName, '#{$fontdir}ProximaNova/ProximaNova-Light', 200, normal)
