--- a/ori/theme/ori_app/src/styles/conf/_breakpoints.sass
+++ b/ori/theme/ori_app/src/styles/conf/_breakpoints.sass
@@ -1,3 +1,4 @@
+@import "~breakpoint-sass/stylesheets/_breakpoint.scss"
 $lg: 1200px	
 $md-up: 992px	
 $md: 992px 1199px	
@@ -8,5 +9,7 @@ $sm-less: max-width 991px
 $xs-up: 769px	
 $xs-only: 480px 768px	
 $xs: max-width 768px	
-$xxs: max-width 560px	
-$xxs-iphone: max-width 320px	
+$xxs-up: min-width 480px	
+$xxs-lg: 480px 1199px
+$xxs: max-width 480px	
+$xxs-iphone: max-width 375px	
