Make moveable tooltip for the programm's products.

--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -59,6 +59,8 @@
 .cascadeShadow
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4)
 .imageContainer 
+	height: 100%
+		/* style */
 	&, &__image 
 		transition: .3s ease-in-out
 		width: span(12)
