--- a/ori/theme/ori_app/src/styles/conf/_common.sass
+++ b/ori/theme/ori_app/src/styles/conf/_common.sass
@@ -55,12 +55,32 @@ h1, h2, h3, h4, h5, h6
   font-weight: normal
   word-break: break-word
 
+li, dd, td, dt, tr
+  margin-top:  $s18
+ul
+  list-style: none
+
+li
+  // padding-left: 1rem
+
+  &:before
+    content: "\25EF"
+    position: relative
+    top: em(-2.5)
+    margin-right: $s6
+    font-size: $s11
+
+nav li
+  margin-top: 0
+  &:before
+    content: none
+
 
 p, li 
   max-width: 60rem
-p:first-of-type
-  margin-top:  $s47 
-p:not(:first-of-type) 
+// p:first-of-type
+//   margin-top:  $s47 
+p
   margin-top: $s29
 ul
   list-style: none
