--- a/ori/theme/ori_app/src/styles/conf/_sizes.sass
+++ b/ori/theme/ori_app/src/styles/conf/_sizes.sass
@@ -1,7 +1,10 @@
 @import './_helpers.sass'
-
+$s3: em(3.7773256768024697908)
+$s6: em(6.8756770631996956367)
+$s11: em(11.12484548825710754017)
 $s18: em(18)
 $s29: em(29.124)
+$s25: em(25.89)
 $s47: em(47.1226)
 $s77: em(77)
 $s144: em(144.35)
