Make responsive footer and extra information section.

--- a/ori/theme/ori_app/src/styles/conf/_colors.sass
+++ b/ori/theme/ori_app/src/styles/conf/_colors.sass
@@ -26,5 +26,5 @@ $buttonGradient: linear-gradient(180deg, #FF61B2 1.1%, $pink 54.7%, #FF61B2 100%
 $lightButtonGradinet: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $pink 100%), $pink
 $registrationButtonGradinet: linear-gradient(180deg, #FA8BC4 0%, $burgund 99.99%, rgba(255, 255, 255, 0) 100%), $pink
 
-
+$linkUnderlineGradient: linear-gradient(to right, $pink 0%, $pink 100%)
 $linkGradient: linear-gradient(180deg, $pink 0% ,rgba(255, 255, 255, .35) 50%, $pink 100%), $pink
