Create button submit state, the registration page with controllers which has different state, and the media page with lazy loaded youtube videos.

--- a/ori/theme/ori_app/src/styles/conf/_colors.sass
+++ b/ori/theme/ori_app/src/styles/conf/_colors.sass
@@ -5,6 +5,7 @@ $beige: #dfa76e
 $i: !important
 $darkGray: #333
 $darkBlue: #403866 
+$blue: #003A5D
 $red: #99303B
 $white: #f2f2f2
 $purple: #654178
@@ -14,6 +15,7 @@ $orange: #66482A//#C98C4D
 $pink: #FA8BC4
 $darkBurgunt: #870447
 $burgund: #941857
+$validColor: #246FD4
 
 $nightBlack: #3f3c39
 $hover-link: $burgund
@@ -26,5 +28,6 @@ $buttonGradient: linear-gradient(180deg, #FF61B2 1.1%, $pink 54.7%, #FF61B2 100%
 $lightButtonGradinet: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, $pink 100%), $pink
 $registrationButtonGradinet: linear-gradient(180deg, #FA8BC4 0%, $burgund 99.99%, rgba(255, 255, 255, 0) 100%), $pink
 
+$focusBorderGradient: linear-gradient(to right, $pink 0%, $burgund 75%, $pink 100%), #FA8BC4;
 $linkUnderlineGradient: linear-gradient(to right, $pink 0%, $pink 100%)
 $linkGradient: linear-gradient(180deg, $pink 0% ,rgba(255, 255, 255, .35) 50%, $pink 100%), $pink
