--- a/ori/theme/ori_app/src/styles/conf/_mixins.sass
+++ b/ori/theme/ori_app/src/styles/conf/_mixins.sass
@@ -51,6 +51,12 @@ $i: !important
   &::after 
     background-color: #{$color}
   
+@mixin generateAfterAndBefore($content)
+  position: relative
+  &::after, &::before
+    content: #{$content}
+    position: absolute
+    
 
   
 
