--- a/ori/theme/ori_app/src/styles/conf/_grid.sass
+++ b/ori/theme/ori_app/src/styles/conf/_grid.sass
@@ -36,7 +36,7 @@ $gutters: 0
 	justify-self: flex-end
 .h-s-start
 	justify-self: flex-start
-.h-s-center
+.h-s-centered
 	justify-self: center
 .v-centered
 	align-items: center
