Add validation, submition, and animation for the registration. Refactor animation of tooltips, and i make it smoothy, than it was. Also, i refactor animation of the header by adding basicScroll plugin. The last thing is i change 'slideTo' method with anime function for smoothing scrolling by click on a link and make the link component for performed sliding to a some page's element.

--- a/ori/theme/ori_app/src/styles/conf/_grid.sass
+++ b/ori/theme/ori_app/src/styles/conf/_grid.sass
@@ -7,6 +7,13 @@ $gutters: 0
 	flex-grow: 1
 .fullWidth
 	min-width: 100%
+.fullWidth_xs
+	@include breakpoint($xs)
+		min-width: 100% !important
+.fullWidth_xxs
+	@include breakpoint($xxs)
+		min-width: 100% !important
+
 .halfWidth
 	min-width: 50%
 .parent 
