--- a/ori/theme/ori_app/src/styles/conf/_patterns.sass
+++ b/ori/theme/ori_app/src/styles/conf/_patterns.sass
@@ -304,6 +304,10 @@ input[type=number]:hover::-webkit-inner-spin-button
 	transition: all 0.3s
 	will-change: transform
 	transform-style: preserve-3d;
+	&:hover, &:focus
+		transform: scale(1.02)
+	&:active
+		transform: scale(1.02) translateY(2px)
 	&, &_submit:after, &_submit:before
 		display: flex
 		justify-content: center
@@ -312,41 +316,40 @@ input[type=number]:hover::-webkit-inner-spin-button
 	    box-shadow: 0
 		
 	&_error
-		transform-origin: 50% 0%
-		transform: rotateX(90deg) translateY(-100%)
+		&, &:hover, &:focus
+			transform-origin: 50% 0%
+			transform: rotateX(90deg) translateY(-100%)
 		&:before
 			top: 100%
 			// background: #e96a6a
 			// color: #a33a3a
 			background-color: $red
-			color: darken($red, 25%)
+			// color: darken($red, 25%)
+			color: $white
 			content: 'Ошибка!'
 			font-weight: 700
 			transform-origin: 0% 0%
 			transform: rotateX(-90deg)
 	&_successful
-		transform-origin: 50% 100%
-		transform: rotateX(-90deg) translateY(100%)
+		&, &:hover, &:focus
+			transform-origin: 50% 100%
+			transform: rotateX(-90deg) translateY(100%)
 		&:after
 			top: -98%
 			// background: #7aca7c
 			// color: #358337
-			background-color: $validColor
-			color: darken($validColor, 25%)
+			background-color: darken($validColor, 25%)
+			color: $white
 			content: 'Успех!'
 			transform-origin: 0% 100%;
 			transform: rotateX(90deg);
 			
-	&:hover, &:focus
-		transform: scale(1.02)
-	&:active
-		transform: scale(1.02) translateY(2px)
 
 
 	&_submit
 		&:after, &:before
 			box-shadow: 2px 4px 6px $shadow
-			text-shadow: -2px 1px 13px rgba(255, 255, 255, .8)
+			text-shadow: -2px 1px 13px $shadow //rgba(255, 255, 255, .8)
 			width: 100%
 			height: 100%
 			position: absolute
