Create store with api and view for shares and a single share.

--- a/ori/theme/ori_app/src/styles/conf/_grid.sass
+++ b/ori/theme/ori_app/src/styles/conf/_grid.sass
@@ -3,6 +3,10 @@ $susy: (use-custom: (em: true), columns: 12, gutters: 0, gutter-position: split,
 @include border-box-sizing
 $border-box-sizing : true
 $gutters: 0
+
+
+.fourWithPadding
+	min-width: calc(33% - #{$s29})
 .grow	
 	flex-grow: 1
 .fullWidth
@@ -29,6 +33,9 @@ $gutters: 0
 
 .baseChild 
 	flex: 1 0 20%
+.littleChild
+	flex: 0 0 25%
+	margin-bottom: $s47
 .h-around
 	justify-content: space-around
 .h-between
