--- a/ori/theme/ori_app/src/styles/conf/_sizes.sass
+++ b/ori/theme/ori_app/src/styles/conf/_sizes.sass
@@ -6,6 +6,7 @@ $s16: em(16)
 $s18: em(18)
 $s29: em(29.124)
 $s25: em(25.89)
+$s41: em(41.886784)
 $s47: em(47.1226)
 $s77: em(77)
 $s144: em(144.35)
