--- a/ori/theme/ori_app/src/styles/conf/_colors.sass
+++ b/ori/theme/ori_app/src/styles/conf/_colors.sass
@@ -30,4 +30,5 @@ $registrationButtonGradinet: linear-gradient(180deg, #FA8BC4 0%, $burgund 99.99%
 
 $focusBorderGradient: linear-gradient(to right, $pink 0%, $burgund 75%, $pink 100%), #FA8BC4;
 $linkUnderlineGradient: linear-gradient(to right, $pink 0%, $pink 100%)
+$darkenLinkUnderlineGradient: linear-gradient(to right, $burgund 0%, $burgund 100%)
 $linkGradient: linear-gradient(180deg, $pink 0% ,rgba(255, 255, 255, .35) 50%, $pink 100%), $pink
