--- a/ori/theme/ori_app/src/styles/conf/_common.sass
+++ b/ori/theme/ori_app/src/styles/conf/_common.sass
@@ -4,7 +4,9 @@ html, body
   -webkit-overflow-scrolling: touch
   -ms-overflow-style: scrollbar
 
+
 body 
+  scroll-behavior: smooth
   & * 
     margin: 0
     padding: 0
