--- a/ori/static/ori/css/fonts.css
+++ b/ori/static/ori/css/fonts.css
@@ -1,85 +1,73 @@
 /* Fonts */
 @font-face {
-  font-family: "SourceSansPro";
+  font-family: "ProximaNova";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Roboto/Roboto-Regular.eot?") format("eot"), url("../fonts/Roboto/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype"), url('../fonts/Roboto/Roboto-Regular.svg#str-replace("SourceSansPro", " ", "_")') format("svg");
+  src: url("../fonts/ProximaNova/ProximaNova-Regular.eot?") format("eot"), url("../fonts/ProximaNova/ProximaNova-Regular.woff2") format("woff2"), url("../fonts/ProximaNova/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-Regular.ttf") format("truetype"), url('../fonts/ProximaNova/ProximaNova-Regular.svg#str-replace("ProximaNova", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "SourceSansPro";
+  font-family: "ProximaNova";
   font-style: italic;
   font-weight: normal;
-  src: url("../fonts/Roboto/Roboto-Italic.eot?") format("eot"), url("../fonts/Roboto/Roboto-Italic.woff2") format("woff2"), url("../fonts/Roboto/Roboto-Italic.woff") format("woff"), url("../fonts/Roboto/Roboto-Italic.ttf") format("truetype"), url('../fonts/Roboto/Roboto-Italic.svg#str-replace("SourceSansPro", " ", "_")') format("svg");
+  src: url("../fonts/ProximaNova/ProximaNova-RegularIt.eot?") format("eot"), url("../fonts/ProximaNova/ProximaNova-RegularIt.woff2") format("woff2"), url("../fonts/ProximaNova/ProximaNova-RegularIt.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-RegularIt.ttf") format("truetype"), url('../fonts/ProximaNova/ProximaNova-RegularIt.svg#str-replace("ProximaNova", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "SourceSansPro";
+  font-family: "ProximaNova";
   font-style: normal;
   font-weight: bold;
-  src: url("../fonts/Roboto/Roboto-Bold.eot?") format("eot"), url("../fonts/Roboto/Roboto-Bold.woff2") format("woff2"), url("../fonts/Roboto/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto/Roboto-Bold.ttf") format("truetype"), url('../fonts/Roboto/Roboto-Bold.svg#str-replace("SourceSansPro", " ", "_")') format("svg");
+  src: url("../fonts/ProximaNova/ProximaNova-Bold.eot?") format("eot"), url("../fonts/ProximaNova/ProximaNova-Bold.woff2") format("woff2"), url("../fonts/ProximaNova/ProximaNova-Bold.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-Bold.ttf") format("truetype"), url('../fonts/ProximaNova/ProximaNova-Bold.svg#str-replace("ProximaNova", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "SourceSansPro";
+  font-family: "ProximaNova";
   font-style: italic;
   font-weight: bold;
-  src: url("../fonts/Roboto/Roboto-BoldItalic.eot?") format("eot"), url("../fonts/Roboto/Roboto-BoldItalic.woff2") format("woff2"), url("../fonts/Roboto/Roboto-BoldItalic.woff") format("woff"), url("../fonts/Roboto/Roboto-BoldItalic.ttf") format("truetype"), url('../fonts/Roboto/Roboto-BoldItalic.svg#str-replace("SourceSansPro", " ", "_")') format("svg");
+  src: url("../fonts/ProximaNova/ProximaNova-BoldItalic.eot?") format("eot"), url("../fonts/ProximaNova/ProximaNova-BoldItalic.woff2") format("woff2"), url("../fonts/ProximaNova/ProximaNova-BoldItalic.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-BoldItalic.ttf") format("truetype"), url('../fonts/ProximaNova/ProximaNova-BoldItalic.svg#str-replace("ProximaNova", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "SourceSansPro";
+  font-family: "ProximaNova";
   font-style: normal;
   font-weight: 200;
-  src: url("../fonts/Roboto/Roboto-Light.eot?") format("eot"), url("../fonts/Roboto/Roboto-Light.woff2") format("woff2"), url("../fonts/Roboto/Roboto-Light.woff") format("woff"), url("../fonts/Roboto/Roboto-Light.ttf") format("truetype"), url('../fonts/Roboto/Roboto-Light.svg#str-replace("SourceSansPro", " ", "_")') format("svg");
+  src: url("../fonts/ProximaNova/ProximaNova-Light.eot?") format("eot"), url("../fonts/ProximaNova/ProximaNova-Light.woff2") format("woff2"), url("../fonts/ProximaNova/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova/ProximaNova-Light.ttf") format("truetype"), url('../fonts/ProximaNova/ProximaNova-Light.svg#str-replace("ProximaNova", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "Ubuntu";
+  font-family: "PlayfairDisplay";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Politica/Politica.eot?") format("eot"), url("../fonts/Politica/Politica.woff2") format("woff2"), url("../fonts/Politica/Politica.woff") format("woff"), url("../fonts/Politica/Politica.ttf") format("truetype"), url('../fonts/Politica/Politica.svg#str-replace("Ubuntu", " ", "_")') format("svg");
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.eot?") format("eot"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff2") format("woff2"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.ttf") format("truetype"), url('../fonts/PlayfairDisplay/PlayfairDisplay-Regular.svg#str-replace("PlayfairDisplay", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "Ubuntu";
+  font-family: "PlayfairDisplay";
   font-style: normal;
   font-weight: bold;
-  src: url("../fonts/Politica/Politica-Bold.eot?") format("eot"), url("../fonts/Politica/Politica-Bold.woff2") format("woff2"), url("../fonts/Politica/Politica-Bold.woff") format("woff"), url("../fonts/Politica/Politica-Bold.ttf") format("truetype"), url('../fonts/Politica/Politica-Bold.svg#str-replace("Ubuntu", " ", "_")') format("svg");
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.eot?") format("eot"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.woff2") format("woff2"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.ttf") format("truetype"), url('../fonts/PlayfairDisplay/PlayfairDisplay-Bold.svg#str-replace("PlayfairDisplay", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "Ubuntu";
+  font-family: "PlayfairDisplay";
   font-style: italic;
   font-weight: bold;
-  src: url("../fonts/Politica/Politica-BoldItalic.eot?") format("eot"), url("../fonts/Politica/Politica-BoldItalic.woff2") format("woff2"), url("../fonts/Politica/Politica-BoldItalic.woff") format("woff"), url("../fonts/Politica/Politica-BoldItalic.ttf") format("truetype"), url('../fonts/Politica/Politica-BoldItalic.svg#str-replace("Ubuntu", " ", "_")') format("svg");
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.eot?") format("eot"), url("../fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.woff2") format("woff2"), url("../fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.ttf") format("truetype"), url('../fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.svg#str-replace("PlayfairDisplay", " ", "_")') format("svg");
   font-display: fallback;
 }
 
 @font-face {
-  font-family: "Ubuntu";
-  font-style: normal;
-  font-weight: 800;
-  src: url("../fonts/Politica/Politica-ExtraBold.eot?") format("eot"), url("../fonts/Politica/Politica-ExtraBold.woff2") format("woff2"), url("../fonts/Politica/Politica-ExtraBold.woff") format("woff"), url("../fonts/Politica/Politica-ExtraBold.ttf") format("truetype"), url('../fonts/Politica/Politica-ExtraBold.svg#str-replace("Ubuntu", " ", "_")') format("svg");
-  font-display: fallback;
-}
-
-@font-face {
-  font-family: "FontAwesome";
-  src: url("../fonts/fontawesome-webfont.eot?") format("eot"), url("../fonts/fontawesome-webfont.woff2") format("woff2"), url("../fonts/fontawesome-webfont.woff") format("woff"), url("../fonts/fontawesome-webfont.ttf") format("truetype"), url('../fonts/fontawesome-webfont.svg#str-replace("FontAwesome", " ", "_")') format("svg");
-  font-display: fallback;
-}
-
-@font-face {
-  font-family: "slick";
-  src: url("../fonts/slick.eot?") format("eot"), url("../fonts/slick.woff2") format("woff2"), url("../fonts/slick.woff") format("woff"), url("../fonts/slick.ttf") format("truetype"), url('../fonts/slick.svg#str-replace("slick", " ", "_")') format("svg");
+  font-family: "PlayfairDisplay";
+  font-style: italic;
+  font-weight: normal;
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.eot?") format("eot"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff2") format("woff2"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.ttf") format("truetype"), url('../fonts/PlayfairDisplay/PlayfairDisplay-Italic.svg#str-replace("PlayfairDisplay", " ", "_")') format("svg");
   font-display: fallback;
 }
 
